# stm32template

./: .mxproject  CMakeLists.txt  Makefile  README.md  STM32F1xx.cmake  template1.ioc
Src/: main.c
